overflow bug fixed

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -4,8 +4,8 @@
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: auto;
 
-    margin-left: 11vw;
-    margin-right: 11vw;
+    padding-left: 11vw;
+    padding-right: 11vw;
 
     grid-template-areas:
         ' head head head . . . .'
@@ -16,6 +16,8 @@
         ' . . order-ul order-ul order-ul order-ul order-ul'
         ' ending ending ending ending ending ending ending'
         '. end-p end-p end-p end-p . .';
+
+    overflow: hidden;
 }
 
 .main p {
