--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,3 +1,7 @@
+.main {
+    overflow: hidden;
+}
+
 .section {
     position: relative;
 
